parse.c

#line 1 "parse.rl"
#include "parse.h"

struct message {};


#line 75 "parse.rl"



#line 13 "parse.c"
static const int syslog_rfc5424_start = 1;
static const int syslog_rfc5424_first_final = 586;
static const int syslog_rfc5424_error = 0;

static const int syslog_rfc5424_en_main = 1;


#line 78 "parse.rl"

int parse(const char* data, int len) {
  const char *p = data;
  const char* pe = p + len;
  const char* eof = (char*)0;
  int cs;
  const char *mark;

  
#line 31 "parse.c"
	{
	cs = syslog_rfc5424_start;
	}

#line 87 "parse.rl"
  
#line 38 "parse.c"
	{
	if ( p == pe )
		goto _test_eof;
	switch ( cs )
	{
case 1:
	if ( (*p) == 60 )
		goto st4;
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr0;
	goto st0;
st0:
cs = 0;
	goto _out;
tr0:
#line 8 "parse.rl"
	{
    mark = p;
  }
	goto st2;
st2:
	if ( ++p == pe )
		goto _test_eof2;
case 2:
#line 63 "parse.c"
	if ( (*p) == 32 )
		goto tr3;
	if ( 48 <= (*p) && (*p) <= 57 )
		goto st2;
	goto st0;
tr3:
#line 23 "parse.rl"
	{}
	goto st3;
st3:
	if ( ++p == pe )
		goto _test_eof3;
case 3:
#line 77 "parse.c"
	if ( (*p) == 60 )
		goto st4;
	goto st0;
st4:
	if ( ++p == pe )
		goto _test_eof4;
case 4:
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr5;
	goto st0;
tr5:
#line 8 "parse.rl"
	{
    mark = p;
  }
	goto st5;
st5:
	if ( ++p == pe )
		goto _test_eof5;
case 5:
#line 98 "parse.c"
	if ( (*p) == 62 )
		goto tr7;
	if ( 48 <= (*p) && (*p) <= 57 )
		goto st6;
	goto st0;
st6:
	if ( ++p == pe )
		goto _test_eof6;
case 6:
	if ( (*p) == 62 )
		goto tr7;
	if ( 48 <= (*p) && (*p) <= 57 )
		goto st7;
	goto st0;
st7:
	if ( ++p == pe )
		goto _test_eof7;
case 7:
	if ( (*p) == 62 )
		goto tr7;
	goto st0;
tr7:
#line 22 "parse.rl"
	{}
	goto st8;
st8:
	if ( ++p == pe )
		goto _test_eof8;
case 8:
#line 128 "parse.c"
	if ( 49 <= (*p) && (*p) <= 57 )
		goto tr9;
	goto st0;
tr9:
#line 8 "parse.rl"
	{
    mark = p;
  }
	goto st9;
st9:
	if ( ++p == pe )
		goto _test_eof9;
case 9:
#line 142 "parse.c"
	if ( (*p) == 32 )
		goto tr10;
	if ( 48 <= (*p) && (*p) <= 57 )
		goto st584;
	goto st0;
tr10:
#line 21 "parse.rl"
	{}
	goto st10;
st10:
	if ( ++p == pe )
		goto _test_eof10;
case 10:
#line 156 "parse.c"
	if ( (*p) == 45 )
		goto st11;
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr13;
	goto st0;
st11:
	if ( ++p == pe )
		goto _test_eof11;
case 11:
	if ( (*p) == 32 )
		goto st12;
	goto st0;
tr589:
#line 16 "parse.rl"
	{}
	goto st12;
st12:
	if ( ++p == pe )
		goto _test_eof12;
case 12:
#line 177 "parse.c"
	if ( 33 <= (*p) && (*p) <= 126 )
		goto tr15;
	goto st0;
tr15:
#line 8 "parse.rl"
	{
    mark = p;
  }
	goto st13;
st13:
	if ( ++p == pe )
		goto _test_eof13;
case 13:
#line 191 "parse.c"
	if ( (*p) == 32 )
		goto tr16;
	if ( 33 <= (*p) && (*p) <= 126 )
		goto st298;
	goto st0;
tr16:
#line 20 "parse.rl"
	{}
	goto st14;
st14:
	if ( ++p == pe )
		goto _test_eof14;
case 14:
#line 205 "parse.c"
	if ( 33 <= (*p) && (*p) <= 126 )
		goto tr18;
	goto st0;
tr18:
#line 8 "parse.rl"
	{
    mark = p;
  }
	goto st15;
st15:
	if ( ++p == pe )
		goto _test_eof15;
case 15:
#line 219 "parse.c"
	if ( (*p) == 32 )
		goto tr19;
	if ( 33 <= (*p) && (*p) <= 126 )
		goto st251;
	goto st0;
tr19:
#line 19 "parse.rl"
	{}
	goto st16;
st16:
	if ( ++p == pe )
		goto _test_eof16;
case 16:
#line 233 "parse.c"
	if ( 33 <= (*p) && (*p) <= 126 )
		goto tr21;
	goto st0;
tr21:
#line 8 "parse.rl"
	{
    mark = p;
  }
	goto st17;
st17:
	if ( ++p == pe )
		goto _test_eof17;
case 17:
#line 247 "parse.c"
	if ( (*p) == 32 )
		goto tr22;
	if ( 33 <= (*p) && (*p) <= 126 )
		goto st124;
	goto st0;
tr22:
#line 18 "parse.rl"
	{}
	goto st18;
st18:
	if ( ++p == pe )
		goto _test_eof18;
case 18:
#line 261 "parse.c"
	if ( 33 <= (*p) && (*p) <= 126 )
		goto tr24;
	goto st0;
tr24:
#line 8 "parse.rl"
	{
    mark = p;
  }
	goto st19;
st19:
	if ( ++p == pe )
		goto _test_eof19;
case 19:
#line 275 "parse.c"
	if ( (*p) == 32 )
		goto tr25;
	if ( 33 <= (*p) && (*p) <= 126 )
		goto st93;
	goto st0;
tr25:
#line 17 "parse.rl"
	{}
	goto st20;
st20:
	if ( ++p == pe )
		goto _test_eof20;
case 20:
#line 289 "parse.c"
	switch( (*p) ) {
		case 45: goto st586;
		case 91: goto st21;
	}
	goto st0;
st586:
	if ( ++p == pe )
		goto _test_eof586;
case 586:
	if ( (*p) == 32 )
		goto st587;
	goto st0;
st587:
	if ( ++p == pe )
		goto _test_eof587;
case 587:
	goto tr598;
tr598:
#line 8 "parse.rl"
	{
    mark = p;
  }
	goto st588;
st588:
	if ( ++p == pe )
		goto _test_eof588;
case 588:
#line 317 "parse.c"
	goto st588;
st21:
	if ( ++p == pe )
		goto _test_eof21;
case 21:
	if ( (*p) == 33 )
		goto tr29;
	if ( (*p) < 62 ) {
		if ( 35 <= (*p) && (*p) <= 60 )
			goto tr29;
	} else if ( (*p) > 92 ) {
		if ( 94 <= (*p) && (*p) <= 126 )
			goto tr29;
	} else
		goto tr29;
	goto st0;
tr29:
#line 8 "parse.rl"
	{
    mark = p;
  }
	goto st22;
st22:
	if ( ++p == pe )
		goto _test_eof22;
case 22:
#line 344 "parse.c"
	switch( (*p) ) {
		case 32: goto tr30;
		case 33: goto st62;
		case 93: goto tr32;
	}
	if ( (*p) > 60 ) {
		if ( 62 <= (*p) && (*p) <= 126 )
			goto st62;
	} else if ( (*p) >= 35 )
		goto st62;
	goto st0;
tr30:
#line 15 "parse.rl"
	{}
	goto st23;
st23:
	if ( ++p == pe )
		goto _test_eof23;
case 23:
#line 364 "parse.c"
	if ( (*p) == 33 )
		goto tr33;
	if ( (*p) < 62 ) {
		if ( 35 <= (*p) && (*p) <= 60 )
			goto tr33;
	} else if ( (*p) > 92 ) {
		if ( 94 <= (*p) && (*p) <= 126 )
			goto tr33;
	} else
		goto tr33;
	goto st0;
tr33:
#line 8 "parse.rl"
	{
    mark = p;
  }
	goto st24;
st24:
	if ( ++p == pe )
		goto _test_eof24;
case 24:
#line 386 "parse.c"
	switch( (*p) ) {
		case 33: goto st25;
		case 61: goto tr35;
	}
	if ( (*p) > 92 ) {
		if ( 94 <= (*p) && (*p) <= 126 )
			goto st25;
	} else if ( (*p) >= 35 )
		goto st25;
	goto st0;
st25:
	if ( ++p == pe )
		goto _test_eof25;
case 25:
	switch( (*p) ) {
		case 33: goto st26;
		case 61: goto tr35;
	}
	if ( (*p) > 92 ) {
		if ( 94 <= (*p) && (*p) <= 126 )
			goto st26;
	} else if ( (*p) >= 35 )
		goto st26;
	goto st0;
st26:
	if ( ++p == pe )
		goto _test_eof26;
case 26:
	switch( (*p) ) {
		case 33: goto st27;
		case 61: goto tr35;
	}
	if ( (*p) > 92 ) {
		if ( 94 <= (*p) && (*p) <= 126 )
			goto st27;
	} else if ( (*p) >= 35 )
		goto st27;
	goto st0;
st27:
	if ( ++p == pe )
		goto _test_eof27;
case 27:
	switch( (*p) ) {
		case 33: goto st28;
		case 61: goto tr35;
	}
	if ( (*p) > 92 ) {
		if ( 94 <= (*p) && (*p) <= 126 )
			goto st28;
	} else if ( (*p) >= 35 )
		goto st28;
	goto st0;
st28:
	if ( ++p == pe )
		goto _test_eof28;
case 28:
	switch( (*p) ) {
		case 33: goto st29;
		case 61: goto tr35;
	}
	if ( (*p) > 92 ) {
		if ( 94 <= (*p) && (*p) <= 126 )
			goto st29;
	} else if ( (*p) >= 35 )
		goto st29;
	goto st0;
st29:
	if ( ++p == pe )
		goto _test_eof29;
case 29:
	switch( (*p) ) {
		case 33: goto st30;
		case 61: goto tr35;
	}
	if ( (*p) > 92 ) {
		if ( 94 <= (*p) && (*p) <= 126 )
			goto st30;
	} else if ( (*p) >= 35 )
		goto st30;
	goto st0;
st30:
	if ( ++p == pe )
		goto _test_eof30;
case 30:
	switch( (*p) ) {
		case 33: goto st31;
		case 61: goto tr35;
	}
	if ( (*p) > 92 ) {
		if ( 94 <= (*p) && (*p) <= 126 )
			goto st31;
	} else if ( (*p) >= 35 )
		goto st31;
	goto st0;
st31:
	if ( ++p == pe )
		goto _test_eof31;
case 31:
	switch( (*p) ) {
		case 33: goto st32;
		case 61: goto tr35;
	}
	if ( (*p) > 92 ) {
		if ( 94 <= (*p) && (*p) <= 126 )
			goto st32;
	} else if ( (*p) >= 35 )
		goto st32;
	goto st0;
st32:
	if ( ++p == pe )
		goto _test_eof32;
case 32:
	switch( (*p) ) {
		case 33: goto st33;
		case 61: goto tr35;
	}
	if ( (*p) > 92 ) {
		if ( 94 <= (*p) && (*p) <= 126 )
			goto st33;
	} else if ( (*p) >= 35 )
		goto st33;
	goto st0;
st33:
	if ( ++p == pe )
		goto _test_eof33;
case 33:
	switch( (*p) ) {
		case 33: goto st34;
		case 61: goto tr35;
	}
	if ( (*p) > 92 ) {
		if ( 94 <= (*p) && (*p) <= 126 )
			goto st34;
	} else if ( (*p) >= 35 )
		goto st34;
	goto st0;
st34:
	if ( ++p == pe )
		goto _test_eof34;
case 34:
	switch( (*p) ) {
		case 33: goto st35;
		case 61: goto tr35;
	}
	if ( (*p) > 92 ) {
		if ( 94 <= (*p) && (*p) <= 126 )
			goto st35;
	} else if ( (*p) >= 35 )
		goto st35;
	goto st0;
st35:
	if ( ++p == pe )
		goto _test_eof35;
case 35:
	switch( (*p) ) {
		case 33: goto st36;
		case 61: goto tr35;
	}
	if ( (*p) > 92 ) {
		if ( 94 <= (*p) && (*p) <= 126 )
			goto st36;
	} else if ( (*p) >= 35 )
		goto st36;
	goto st0;
st36:
	if ( ++p == pe )
		goto _test_eof36;
case 36:
	switch( (*p) ) {
		case 33: goto st37;
		case 61: goto tr35;
	}
	if ( (*p) > 92 ) {
		if ( 94 <= (*p) && (*p) <= 126 )
			goto st37;
	} else if ( (*p) >= 35 )
		goto st37;
	goto st0;
st37:
	if ( ++p == pe )
		goto _test_eof37;
case 37:
	switch( (*p) ) {
		case 33: goto st38;
		case 61: goto tr35;
	}
	if ( (*p) > 92 ) {
		if ( 94 <= (*p) && (*p) <= 126 )
			goto st38;
	} else if ( (*p) >= 35 )
		goto st38;
	goto st0;
st38:
	if ( ++p == pe )
		goto _test_eof38;
case 38:
	switch( (*p) ) {
		case 33: goto st39;
		case 61: goto tr35;
	}
	if ( (*p) > 92 ) {
		if ( 94 <= (*p) && (*p) <= 126 )
			goto st39;
	} else if ( (*p) >= 35 )
		goto st39;
	goto st0;
st39:
	if ( ++p == pe )
		goto _test_eof39;
case 39:
	switch( (*p) ) {
		case 33: goto st40;
		case 61: goto tr35;
	}
	if ( (*p) > 92 ) {
		if ( 94 <= (*p) && (*p) <= 126 )
			goto st40;
	} else if ( (*p) >= 35 )
		goto st40;
	goto st0;
st40:
	if ( ++p == pe )
		goto _test_eof40;
case 40:
	switch( (*p) ) {
		case 33: goto st41;
		case 61: goto tr35;
	}
	if ( (*p) > 92 ) {
		if ( 94 <= (*p) && (*p) <= 126 )
			goto st41;
	} else if ( (*p) >= 35 )
		goto st41;
	goto st0;
st41:
	if ( ++p == pe )
		goto _test_eof41;
case 41:
	switch( (*p) ) {
		case 33: goto st42;
		case 61: goto tr35;
	}
	if ( (*p) > 92 ) {
		if ( 94 <= (*p) && (*p) <= 126 )
			goto st42;
	} else if ( (*p) >= 35 )
		goto st42;
	goto st0;
st42:
	if ( ++p == pe )
		goto _test_eof42;
case 42:
	switch( (*p) ) {
		case 33: goto st43;
		case 61: goto tr35;
	}
	if ( (*p) > 92 ) {
		if ( 94 <= (*p) && (*p) <= 126 )
			goto st43;
	} else if ( (*p) >= 35 )
		goto st43;
	goto st0;
st43:
	if ( ++p == pe )
		goto _test_eof43;
case 43:
	switch( (*p) ) {
		case 33: goto st44;
		case 61: goto tr35;
	}
	if ( (*p) > 92 ) {
		if ( 94 <= (*p) && (*p) <= 126 )
			goto st44;
	} else if ( (*p) >= 35 )
		goto st44;
	goto st0;
st44:
	if ( ++p == pe )
		goto _test_eof44;
case 44:
	switch( (*p) ) {
		case 33: goto st45;
		case 61: goto tr35;
	}
	if ( (*p) > 92 ) {
		if ( 94 <= (*p) && (*p) <= 126 )
			goto st45;
	} else if ( (*p) >= 35 )
		goto st45;
	goto st0;
st45:
	if ( ++p == pe )
		goto _test_eof45;
case 45:
	switch( (*p) ) {
		case 33: goto st46;
		case 61: goto tr35;
	}
	if ( (*p) > 92 ) {
		if ( 94 <= (*p) && (*p) <= 126 )
			goto st46;
	} else if ( (*p) >= 35 )
		goto st46;
	goto st0;
st46:
	if ( ++p == pe )
		goto _test_eof46;
case 46:
	switch( (*p) ) {
		case 33: goto st47;
		case 61: goto tr35;
	}
	if ( (*p) > 92 ) {
		if ( 94 <= (*p) && (*p) <= 126 )
			goto st47;
	} else if ( (*p) >= 35 )
		goto st47;
	goto st0;
st47:
	if ( ++p == pe )
		goto _test_eof47;
case 47:
	switch( (*p) ) {
		case 33: goto st48;
		case 61: goto tr35;
	}
	if ( (*p) > 92 ) {
		if ( 94 <= (*p) && (*p) <= 126 )
			goto st48;
	} else if ( (*p) >= 35 )
		goto st48;
	goto st0;
st48:
	if ( ++p == pe )
		goto _test_eof48;
case 48:
	switch( (*p) ) {
		case 33: goto st49;
		case 61: goto tr35;
	}
	if ( (*p) > 92 ) {
		if ( 94 <= (*p) && (*p) <= 126 )
			goto st49;
	} else if ( (*p) >= 35 )
		goto st49;
	goto st0;
st49:
	if ( ++p == pe )
		goto _test_eof49;
case 49:
	switch( (*p) ) {
		case 33: goto st50;
		case 61: goto tr35;
	}
	if ( (*p) > 92 ) {
		if ( 94 <= (*p) && (*p) <= 126 )
			goto st50;
	} else if ( (*p) >= 35 )
		goto st50;
	goto st0;
st50:
	if ( ++p == pe )
		goto _test_eof50;
case 50:
	switch( (*p) ) {
		case 33: goto st51;
		case 61: goto tr35;
	}
	if ( (*p) > 92 ) {
		if ( 94 <= (*p) && (*p) <= 126 )
			goto st51;
	} else if ( (*p) >= 35 )
		goto st51;
	goto st0;
st51:
	if ( ++p == pe )
		goto _test_eof51;
case 51:
	switch( (*p) ) {
		case 33: goto st52;
		case 61: goto tr35;
	}
	if ( (*p) > 92 ) {
		if ( 94 <= (*p) && (*p) <= 126 )
			goto st52;
	} else if ( (*p) >= 35 )
		goto st52;
	goto st0;
st52:
	if ( ++p == pe )
		goto _test_eof52;
case 52:
	switch( (*p) ) {
		case 33: goto st53;
		case 61: goto tr35;
	}
	if ( (*p) > 92 ) {
		if ( 94 <= (*p) && (*p) <= 126 )
			goto st53;
	} else if ( (*p) >= 35 )
		goto st53;
	goto st0;
st53:
	if ( ++p == pe )
		goto _test_eof53;
case 53:
	switch( (*p) ) {
		case 33: goto st54;
		case 61: goto tr35;
	}
	if ( (*p) > 92 ) {
		if ( 94 <= (*p) && (*p) <= 126 )
			goto st54;
	} else if ( (*p) >= 35 )
		goto st54;
	goto st0;
st54:
	if ( ++p == pe )
		goto _test_eof54;
case 54:
	switch( (*p) ) {
		case 33: goto st55;
		case 61: goto tr35;
	}
	if ( (*p) > 92 ) {
		if ( 94 <= (*p) && (*p) <= 126 )
			goto st55;
	} else if ( (*p) >= 35 )
		goto st55;
	goto st0;
st55:
	if ( ++p == pe )
		goto _test_eof55;
case 55:
	if ( (*p) == 61 )
		goto tr35;
	goto st0;
tr35:
#line 14 "parse.rl"
	{}
	goto st56;
st56:
	if ( ++p == pe )
		goto _test_eof56;
case 56:
#line 832 "parse.c"
	if ( (*p) == 34 )
		goto st57;
	goto st0;
st57:
	if ( ++p == pe )
		goto _test_eof57;
case 57:
	switch( (*p) ) {
		case 34: goto tr68;
		case 92: goto tr69;
		case 93: goto st0;
	}
	goto tr67;
tr67:
#line 8 "parse.rl"
	{
    mark = p;
  }
	goto st58;
tr76:
#line 11 "parse.rl"
	{}
	goto st58;
st58:
	if ( ++p == pe )
		goto _test_eof58;
case 58:
#line 860 "parse.c"
	switch( (*p) ) {
		case 34: goto tr71;
		case 92: goto st60;
		case 93: goto st0;
	}
	goto st58;
tr68:
#line 8 "parse.rl"
	{
    mark = p;
  }
#line 13 "parse.rl"
	{}
	goto st59;
tr71:
#line 13 "parse.rl"
	{}
	goto st59;
tr77:
#line 11 "parse.rl"
	{}
#line 13 "parse.rl"
	{}
	goto st59;
st59:
	if ( ++p == pe )
		goto _test_eof59;
case 59:
#line 889 "parse.c"
	switch( (*p) ) {
		case 32: goto st23;
		case 93: goto st589;
	}
	goto st0;
tr32:
#line 15 "parse.rl"
	{}
	goto st589;
st589:
	if ( ++p == pe )
		goto _test_eof589;
case 589:
#line 903 "parse.c"
	switch( (*p) ) {
		case 32: goto st587;
		case 91: goto st21;
	}
	goto st0;
tr69:
#line 8 "parse.rl"
	{
    mark = p;
  }
	goto st60;
tr78:
#line 11 "parse.rl"
	{}
	goto st60;
st60:
	if ( ++p == pe )
		goto _test_eof60;
case 60:
#line 923 "parse.c"
	if ( (*p) == 34 )
		goto st61;
	if ( 92 <= (*p) && (*p) <= 93 )
		goto st61;
	goto st0;
st61:
	if ( ++p == pe )
		goto _test_eof61;
case 61:
	switch( (*p) ) {
		case 34: goto tr77;
		case 92: goto tr78;
		case 93: goto st0;
	}
	goto tr76;
st62:
	if ( ++p == pe )
		goto _test_eof62;
case 62:
	switch( (*p) ) {
		case 32: goto tr30;
		case 33: goto st63;
		case 93: goto tr32;
	}
	if ( (*p) > 60 ) {
		if ( 62 <= (*p) && (*p) <= 126 )
			goto st63;
	} else if ( (*p) >= 35 )
		goto st63;
	goto st0;
st63:
	if ( ++p == pe )
		goto _test_eof63;
case 63:
	switch( (*p) ) {
		case 32: goto tr30;
		case 33: goto st64;
		case 93: goto tr32;
	}
	if ( (*p) > 60 ) {
		if ( 62 <= (*p) && (*p) <= 126 )
			goto st64;
	} else if ( (*p) >= 35 )
		goto st64;
	goto st0;
st64:
	if ( ++p == pe )
		goto _test_eof64;
case 64:
	switch( (*p) ) {
		case 32: goto tr30;
		case 33: goto st65;
		case 93: goto tr32;
	}
	if ( (*p) > 60 ) {
		if ( 62 <= (*p) && (*p) <= 126 )
			goto st65;
	} else if ( (*p) >= 35 )
		goto st65;
	goto st0;
st65:
	if ( ++p == pe )
		goto _test_eof65;
case 65:
	switch( (*p) ) {
		case 32: goto tr30;
		case 33: goto st66;
		case 93: goto tr32;
	}
	if ( (*p) > 60 ) {
		if ( 62 <= (*p) && (*p) <= 126 )
			goto st66;
	} else if ( (*p) >= 35 )
		goto st66;
	goto st0;
st66:
	if ( ++p == pe )
		goto _test_eof66;
case 66:
	switch( (*p) ) {
		case 32: goto tr30;
		case 33: goto st67;
		case 93: goto tr32;
	}
	if ( (*p) > 60 ) {
		if ( 62 <= (*p) && (*p) <= 126 )
			goto st67;
	} else if ( (*p) >= 35 )
		goto st67;
	goto st0;
st67:
	if ( ++p == pe )
		goto _test_eof67;
case 67:
	switch( (*p) ) {
		case 32: goto tr30;
		case 33: goto st68;
		case 93: goto tr32;
	}
	if ( (*p) > 60 ) {
		if ( 62 <= (*p) && (*p) <= 126 )
			goto st68;
	} else if ( (*p) >= 35 )
		goto st68;
	goto st0;
st68:
	if ( ++p == pe )
		goto _test_eof68;
case 68:
	switch( (*p) ) {
		case 32: goto tr30;
		case 33: goto st69;
		case 93: goto tr32;
	}
	if ( (*p) > 60 ) {
		if ( 62 <= (*p) && (*p) <= 126 )
			goto st69;
	} else if ( (*p) >= 35 )
		goto st69;
	goto st0;
st69:
	if ( ++p == pe )
		goto _test_eof69;
case 69:
	switch( (*p) ) {
		case 32: goto tr30;
		case 33: goto st70;
		case 93: goto tr32;
	}
	if ( (*p) > 60 ) {
		if ( 62 <= (*p) && (*p) <= 126 )
			goto st70;
	} else if ( (*p) >= 35 )
		goto st70;
	goto st0;
st70:
	if ( ++p == pe )
		goto _test_eof70;
case 70:
	switch( (*p) ) {
		case 32: goto tr30;
		case 33: goto st71;
		case 93: goto tr32;
	}
	if ( (*p) > 60 ) {
		if ( 62 <= (*p) && (*p) <= 126 )
			goto st71;
	} else if ( (*p) >= 35 )
		goto st71;
	goto st0;
st71:
	if ( ++p == pe )
		goto _test_eof71;
case 71:
	switch( (*p) ) {
		case 32: goto tr30;
		case 33: goto st72;
		case 93: goto tr32;
	}
	if ( (*p) > 60 ) {
		if ( 62 <= (*p) && (*p) <= 126 )
			goto st72;
	} else if ( (*p) >= 35 )
		goto st72;
	goto st0;
st72:
	if ( ++p == pe )
		goto _test_eof72;
case 72:
	switch( (*p) ) {
		case 32: goto tr30;
		case 33: goto st73;
		case 93: goto tr32;
	}
	if ( (*p) > 60 ) {
		if ( 62 <= (*p) && (*p) <= 126 )
			goto st73;
	} else if ( (*p) >= 35 )
		goto st73;
	goto st0;
st73:
	if ( ++p == pe )
		goto _test_eof73;
case 73:
	switch( (*p) ) {
		case 32: goto tr30;
		case 33: goto st74;
		case 93: goto tr32;
	}
	if ( (*p) > 60 ) {
		if ( 62 <= (*p) && (*p) <= 126 )
			goto st74;
	} else if ( (*p) >= 35 )
		goto st74;
	goto st0;
st74:
	if ( ++p == pe )
		goto _test_eof74;
case 74:
	switch( (*p) ) {
		case 32: goto tr30;
		case 33: goto st75;
		case 93: goto tr32;
	}
	if ( (*p) > 60 ) {
		if ( 62 <= (*p) && (*p) <= 126 )
			goto st75;
	} else if ( (*p) >= 35 )
		goto st75;
	goto st0;
st75:
	if ( ++p == pe )
		goto _test_eof75;
case 75:
	switch( (*p) ) {
		case 32: goto tr30;
		case 33: goto st76;
		case 93: goto tr32;
	}
	if ( (*p) > 60 ) {
		if ( 62 <= (*p) && (*p) <= 126 )
			goto st76;
	} else if ( (*p) >= 35 )
		goto st76;
	goto st0;
st76:
	if ( ++p == pe )
		goto _test_eof76;
case 76:
	switch( (*p) ) {
		case 32: goto tr30;
		case 33: goto st77;
		case 93: goto tr32;
	}
	if ( (*p) > 60 ) {
		if ( 62 <= (*p) && (*p) <= 126 )
			goto st77;
	} else if ( (*p) >= 35 )
		goto st77;
	goto st0;
st77:
	if ( ++p == pe )
		goto _test_eof77;
case 77:
	switch( (*p) ) {
		case 32: goto tr30;
		case 33: goto st78;
		case 93: goto tr32;
	}
	if ( (*p) > 60 ) {
		if ( 62 <= (*p) && (*p) <= 126 )
			goto st78;
	} else if ( (*p) >= 35 )
		goto st78;
	goto st0;
st78:
	if ( ++p == pe )
		goto _test_eof78;
case 78:
	switch( (*p) ) {
		case 32: goto tr30;
		case 33: goto st79;
		case 93: goto tr32;
	}
	if ( (*p) > 60 ) {
		if ( 62 <= (*p) && (*p) <= 126 )
			goto st79;
	} else if ( (*p) >= 35 )
		goto st79;
	goto st0;
st79:
	if ( ++p == pe )
		goto _test_eof79;
case 79:
	switch( (*p) ) {
		case 32: goto tr30;
		case 33: goto st80;
		case 93: goto tr32;
	}
	if ( (*p) > 60 ) {
		if ( 62 <= (*p) && (*p) <= 126 )
			goto st80;
	} else if ( (*p) >= 35 )
		goto st80;
	goto st0;
st80:
	if ( ++p == pe )
		goto _test_eof80;
case 80:
	switch( (*p) ) {
		case 32: goto tr30;
		case 33: goto st81;
		case 93: goto tr32;
	}
	if ( (*p) > 60 ) {
		if ( 62 <= (*p) && (*p) <= 126 )
			goto st81;
	} else if ( (*p) >= 35 )
		goto st81;
	goto st0;
st81:
	if ( ++p == pe )
		goto _test_eof81;
case 81:
	switch( (*p) ) {
		case 32: goto tr30;
		case 33: goto st82;
		case 93: goto tr32;
	}
	if ( (*p) > 60 ) {
		if ( 62 <= (*p) && (*p) <= 126 )
			goto st82;
	} else if ( (*p) >= 35 )
		goto st82;
	goto st0;
st82:
	if ( ++p == pe )
		goto _test_eof82;
case 82:
	switch( (*p) ) {
		case 32: goto tr30;
		case 33: goto st83;
		case 93: goto tr32;
	}
	if ( (*p) > 60 ) {
		if ( 62 <= (*p) && (*p) <= 126 )
			goto st83;
	} else if ( (*p) >= 35 )
		goto st83;
	goto st0;
st83:
	if ( ++p == pe )
		goto _test_eof83;
case 83:
	switch( (*p) ) {
		case 32: goto tr30;
		case 33: goto st84;
		case 93: goto tr32;
	}
	if ( (*p) > 60 ) {
		if ( 62 <= (*p) && (*p) <= 126 )
			goto st84;
	} else if ( (*p) >= 35 )
		goto st84;
	goto st0;
st84:
	if ( ++p == pe )
		goto _test_eof84;
case 84:
	switch( (*p) ) {
		case 32: goto tr30;
		case 33: goto st85;
		case 93: goto tr32;
	}
	if ( (*p) > 60 ) {
		if ( 62 <= (*p) && (*p) <= 126 )
			goto st85;
	} else if ( (*p) >= 35 )
		goto st85;
	goto st0;
st85:
	if ( ++p == pe )
		goto _test_eof85;
case 85:
	switch( (*p) ) {
		case 32: goto tr30;
		case 33: goto st86;
		case 93: goto tr32;
	}
	if ( (*p) > 60 ) {
		if ( 62 <= (*p) && (*p) <= 126 )
			goto st86;
	} else if ( (*p) >= 35 )
		goto st86;
	goto st0;
st86:
	if ( ++p == pe )
		goto _test_eof86;
case 86:
	switch( (*p) ) {
		case 32: goto tr30;
		case 33: goto st87;
		case 93: goto tr32;
	}
	if ( (*p) > 60 ) {
		if ( 62 <= (*p) && (*p) <= 126 )
			goto st87;
	} else if ( (*p) >= 35 )
		goto st87;
	goto st0;
st87:
	if ( ++p == pe )
		goto _test_eof87;
case 87:
	switch( (*p) ) {
		case 32: goto tr30;
		case 33: goto st88;
		case 93: goto tr32;
	}
	if ( (*p) > 60 ) {
		if ( 62 <= (*p) && (*p) <= 126 )
			goto st88;
	} else if ( (*p) >= 35 )
		goto st88;
	goto st0;
st88:
	if ( ++p == pe )
		goto _test_eof88;
case 88:
	switch( (*p) ) {
		case 32: goto tr30;
		case 33: goto st89;
		case 93: goto tr32;
	}
	if ( (*p) > 60 ) {
		if ( 62 <= (*p) && (*p) <= 126 )
			goto st89;
	} else if ( (*p) >= 35 )
		goto st89;
	goto st0;
st89:
	if ( ++p == pe )
		goto _test_eof89;
case 89:
	switch( (*p) ) {
		case 32: goto tr30;
		case 33: goto st90;
